Fixed logging streams of cassandra

--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -1,9 +1,15 @@
 [supervisord]
 nodaemon=true
+loglevel=error
 
 [program:snapshotter]
 command=/opt/cassandra/bin/snapshot-scheduler.sh
 
-
 [program:cassandra]
 command=/opt/cassandra/bin/stups-cassandra.sh
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+
+
