--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,9 +1,13 @@
 [supervisord]
 nodaemon=true
 
+[program:seedHeartBeat]
+command=/opt/cassandra/bin/seedHeartBeat.sh
+
 [program:snapshotter]
 command=/opt/cassandra/bin/snapshot-scheduler.sh
 
-
 [program:cassandra]
 command=/opt/cassandra/bin/stups-cassandra.sh
+
+
