--- a/stups-cassandra.yaml
+++ b/stups-cassandra.yaml
@@ -3,21 +3,22 @@ SenzaInfo:
   Parameters:
     - EtcdDomain:
         Description: "Your etcd domain (e.g. etcd.cassandra.rocks.org)"
+        Default: cassandra.octopus.zalan.do
     - ClusterSize:
         Description: "The initial size (number of nodes) for the new Cassandra cluster"
         Default: "3"
     - ImageVersion:
         Description: "Which Image version to use (e.g. 2.1.8-p0)"
-        Default: "2.1.9-p0"
+        Default: "1.2-SNAPSHOT"
     - OpsCenterIp:
         Description: "Register to Opscenter using Ip address"
         Default: ""
     - ScalyrKey:
         Description: "The API key of Scalyr logging service used by Taupage"
-        Default: ""
+        Default: 0nQOAOXXJVu3kEtxP5AnMUb5eNh_M/W4WBvf7mx43siI-
     - ApplicationId:
         Description: "The application id according to yourturn"
-        Default: "stups-cassandra"
+        Default: "cassandra"
 
 SenzaComponents:
 
@@ -26,7 +27,7 @@ SenzaComponents:
 
   - CassandraCluster:
       Type: Senza::TaupageAutoScalingGroup
-      InstanceType: "c3.2xlarge" # Has 2 80GB SSDs
+      InstanceType: "m3.xlarge" # Has 2 80GB SSDs
       SecurityGroups:
         - Fn::GetAtt:
           - StupsCassandraSg
@@ -108,3 +109,37 @@ Resources:
         FromPort: 22
         ToPort: 22
         CidrIp: 0.0.0.0/0
+
+   StupsCassandraRole:
+      Type: AWS::IAM::Role
+      Properties:
+        Policies:
+        - PolicyName: CassandraSnapshotWrite
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+            - Effect: Allow
+              Action: "s3:PutObject"
+              Resource: ["arn:aws:s3:::{{Arguments.BackupBucket}}/{{Arguments.ApplicationId}}-snapshot/*"]
+        - PolicyName: CassandraMintRead
+          PolicyDocument:
+              Version: "2012-10-17"
+              Statement:
+              - Effect: Allow
+                Action: "s3:GetObject"
+                Resource: ["arn:aws:s3:::zalando-stups-mint-268094141749-eu-west-1/cassandra/*"]
+        - PolicyName: CassandraSnapshotListBucket
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+            - Effect: Allow
+              Action: "s3:ListBucket"
+              Resource: ["arn:aws:s3:::{{Arguments.BackupBucket}}"]
+        AssumeRolePolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+          - Effect: Allow
+            Principal:
+              Service: ec2.amazonaws.com
+            Action: sts:AssumeRole
+        Path: /
