renamed to seed-heartbeat.sh

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,8 +1,8 @@
 [supervisord]
 nodaemon=true
 
-[program:seedHeartBeat]
-command=/opt/cassandra/bin/seedHeartBeat.sh
+[program:heartbeat]
+command=/opt/cassandra/bin/seed-heartbeat.sh
 
 [program:snapshotter]
 command=/opt/cassandra/bin/snapshot-scheduler.sh
