MinClusterSize has been changed to ClusterSize

--- a/stups-cassandra.yaml
+++ b/stups-cassandra.yaml
@@ -49,7 +49,7 @@ SenzaComponents:
       AutoScaling:
         Minimum: "{{Arguments.ClusterSize}}"
         Maximum: "{{Arguments.ClusterSize}}"
-        DesiredCapacity: "{{Arguments.MinClusterSize}}"
+        DesiredCapacity: "{{Arguments.ClusterSize}}"
         MetricType: CPU
       TaupageConfig:
         root: true
