Added cassandra out redirection to supervisord stdout

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -8,6 +8,8 @@ command=/opt/cassandra/bin/seed-heartbeat.sh
 command=/opt/cassandra/bin/snapshot-scheduler.sh
 
 [program:cassandra]
-command=/bin/bash -c "/opt/cassandra/bin/stups-cassandra.sh &> /opt/recovery/log-`date | awk '{print $4}'`"
-
-
+command=/bin/bash -c "/opt/cassandra/bin/stups-cassandra.sh"
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
