--- a/cassandra_template.yaml
+++ b/cassandra_template.yaml
@@ -208,7 +208,7 @@ counter_cache_save_period: 7200
 # modify cassandra-env.sh as directed in the file.
 #
 # Defaults to NativeAllocator
-memory_allocator: NativeAllocator
+#memory_allocator: NativeAllocator
 
 # saved caches
 # If not set, the default directory is $CASSANDRA_HOME/data/saved_caches.
