OCTO-1077 update cassandra docker image

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,7 +5,11 @@ nodaemon=true
 command=/opt/cassandra/bin/seed-heartbeat.sh
 
 [program:snapshotter]
-command=/opt/cassandra/bin/snapshot-scheduler.sh
+; command=/opt/cassandra/bin/snapshot-scheduler.sh
+command=echo "snapshotter is disabled"
+
+[program:repair]
+command=/opt/cassandra/bin/repair-scheduler.sh
 
 [program:cassandra]
 command=/bin/bash -c "/opt/cassandra/bin/stups-cassandra.sh"
