OCTO-1077 re-enable backups

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,8 +5,7 @@ nodaemon=true
 command=/opt/cassandra/bin/seed-heartbeat.sh
 
 [program:snapshotter]
-; command=/opt/cassandra/bin/snapshot-scheduler.sh
-command=echo "snapshotter is disabled"
+command=/opt/cassandra/bin/snapshot-scheduler.sh
 
 [program:repair]
 command=/opt/cassandra/bin/repair-scheduler.sh
